--- a/scalable/categories/Makefile.am
+++ b/scalable/categories/Makefile.am
@@ -12,6 +12,7 @@ icons_DATA =				\
 	applications-internet.svg	\
 	applications-multimedia.svg	\
 	applications-office.svg	\
+	applications-other.svg	\
 	applications-system.svg	\
 	preferences-desktop.svg
 
