--- a/scalable/categories/Makefile.am
+++ b/scalable/categories/Makefile.am
@@ -14,6 +14,7 @@ icons_DATA =				\
 	applications-office.svg	\
 	applications-other.svg	\
 	applications-system.svg	\
+	applications-utilities.svg	\
 	preferences-desktop.svg
 
 EXTRA_DIST =				\
