--- a/16x16/categories/Makefile.am
+++ b/16x16/categories/Makefile.am
@@ -16,6 +16,7 @@ icons_DATA =				\
 	applications-system.png	\
 	applications-utilities.png	\
 	preferences-desktop.png	\
+	preferences-desktop-locale.png	\
 	preferences-desktop-peripherals.png	\
 	preferences-system.png
 
