--- a/16x16/apps/Makefile.am
+++ b/16x16/apps/Makefile.am
@@ -19,6 +19,7 @@ icons_DATA =						\
 	preferences-desktop-assistive-technology.png	\
 	preferences-desktop-font.png			\
 	preferences-desktop-keyboard-shortcuts.png	\
+	preferences-desktop-locale.png	\
 	preferences-desktop-remote-desktop.png		\
 	preferences-desktop-screensaver.png		\
 	preferences-desktop-sound.png			\
