--- a/scalable/mimetypes/Makefile.am
+++ b/scalable/mimetypes/Makefile.am
@@ -16,6 +16,7 @@ icons_DATA =					\
 	text-x-script.svg			\
 	video-x-generic.svg			\
 	x-office-address-book.svg		\
+	x-office-calendar.svg	\
 	x-office-document.svg			\
 	x-office-spreadsheet.svg
 
