--- a/scalable/actions/Makefile.am
+++ b/scalable/actions/Makefile.am
@@ -49,6 +49,7 @@ icons_DATA =				\
 	mail-mark-junk.svg	\
 	mail-reply-all.svg	\
 	mail-reply-sender.svg	\
+	mail-send-receive.svg	\
 	media-eject.svg	\
 	media-playback-pause.svg	\
 	media-playback-start.svg	\
