--- a/22x22/actions/Makefile.am
+++ b/22x22/actions/Makefile.am
@@ -19,6 +19,7 @@ icons_DATA =				\
 	edit-clear.png			\
 	edit-copy.png			\
 	edit-cut.png			\
+	edit-delete.png	\
 	edit-find.png			\
 	edit-find-replace.png			\
 	edit-paste.png			\
