--- a/scalable/places/Makefile.am
+++ b/scalable/places/Makefile.am
@@ -11,6 +11,7 @@ icons_DATA =					\
 	folder-saved-search.svg			\
 	network-server.svg			\
 	network-workgroup.svg			\
+	start-here.svg	\
 	user-desktop.svg			\
 	user-home.svg				\
 	user-trash.svg
