2006-01-19  Rodney Dawes  <dobey@novell.com>
	* 22x22/status/Makefile.am:
	* 22x22/status/weather-*.png:
	* scalable/status/Makefile.am:
	* scalable/status/weather-*.svg:
	Add new weather status icons from Ryan Collier

--- a/scalable/status/Makefile.am
+++ b/scalable/status/Makefile.am
@@ -18,7 +18,17 @@ icons_DATA =				\
 	image-missing.svg		\
 	mail-attachment.svg		\
 	network-wireless-encrypted.svg	\
-	user-trash-full.svg
+	user-trash-full.svg		\
+	weather-clear.svg		\
+	weather-clear-night.svg		\
+	weather-few-clouds.svg		\
+	weather-few-clouds-night.svg	\
+	weather-overcast.svg		\
+	weather-severe-alert.svg	\
+	weather-showers.svg		\
+	weather-showers-scattered.svg	\
+	weather-snow.svg		\
+	weather-storm.svg
 
 EXTRA_DIST =				\
 	$(icons_DATA)
