--- a/22x22/mimetypes/Makefile.am
+++ b/22x22/mimetypes/Makefile.am
@@ -8,6 +8,7 @@ icons_DATA =					\
 	application-certificate.png		\
 	application-x-executable.png		\
 	audio-x-generic.png			\
+	font-x-generic.png	\
 	image-x-generic.png			\
 	package-x-generic.png			\
 	text-html.png				\
