2006-02-16  Rodney Dawes  <dobey@novell.com>
	* */status/Makefile.am: Update for new network status icons

	* */status/network-online.*: Remove this icon to be replaced by new
	network status icons with support for blinking lights and ambiguity

	* */status/network-offline.*: Update with new status icon

	* */status/network-idle.*:
	* */status/network-receive.*:
	* */status/network-transmit.*:
	* */status/network-transmit-receive.*:
	Add in these new status icons with support for blinking lights to
	show network activity, but keep the light on as subtle as possible

--- a/22x22/status/Makefile.am
+++ b/22x22/status/Makefile.am
@@ -5,10 +5,10 @@ context = status
 iconsdir = $(themedir)/$(size)/$(context)
 
 icons_DATA =				\
-	audio-volume-high.png	\
-	audio-volume-low.png	\
-	audio-volume-medium.png	\
-	audio-volume-muted.png	\
+	audio-volume-high.png		\
+	audio-volume-low.png		\
+	audio-volume-medium.png		\
+	audio-volume-muted.png		\
 	battery-caution.png		\
 	dialog-error.png		\
 	dialog-information.png		\
@@ -19,10 +19,13 @@ icons_DATA =				\
 	image-loading.png		\
 	image-missing.png		\
 	mail-attachment.png		\
-	network-offline.png	\
-	network-online.png	\
+	network-idle.png		\
+	network-offline.png		\
+	network-receive.png		\
+	network-transmit.png		\
+	network-transmit-receive.png	\
 	network-wireless-encrypted.png	\
-	printer-error.png	\
+	printer-error.png		\
 	user-trash-full.png		\
 	weather-clear.png		\
 	weather-clear-night.png		\
