2006-02-17  Rodney Dawes  <dobey@novell.com>
	* */status/Makefile.am: Update for network-error icon

	* */status/network-error.*: New network-error status icon

--- a/16x16/status/Makefile.am
+++ b/16x16/status/Makefile.am
@@ -19,6 +19,7 @@ icons_DATA =				\
 	image-loading.png		\
 	image-missing.png		\
 	mail-attachment.png 		\
+	network-error.png		\
 	network-idle.png		\
 	network-offline.png		\
 	network-receive.png		\
