2006-04-21  Rodney Dawes  <dobey@novell.com>
	* AUTHORS: Add Steven Garrity to the list

	* scalable/mimetypes/Makefile.am: Fix broken use of \ followed by a
	blank line

--- a/scalable/mimetypes/Makefile.am
+++ b/scalable/mimetypes/Makefile.am
@@ -25,7 +25,7 @@ icons_DATA =					\
 	x-office-presentation.svg	\
 	x-office-presentation-template.svg	\
 	x-office-spreadsheet.svg	\
-	x-office-spreadsheet-template.svg	\
+	x-office-spreadsheet-template.svg
 
 EXTRA_DIST =					\
 	$(icons_DATA)
