cute emoticon from ulisse

--- a/16x16/emotes/Makefile.am
+++ b/16x16/emotes/Makefile.am
@@ -11,6 +11,7 @@ icons_DATA =			\
 	face-glasses.png	\
 	face-grin.png		\
 	face-kiss.png		\
+	face-monkey.png	\
 	face-plain.png		\
 	face-sad.png		\
 	face-smile.png		\
