2006-07-07  Rodney Dawes  <dobey@novell.com>
	* scalable/*/Makefile.am: Don't generate 32x32 versions of the icons
	from the SVGs as we now have native 32x32 versions

--- a/scalable/apps/Makefile.am
+++ b/scalable/apps/Makefile.am
@@ -40,7 +40,7 @@ EXTRA_DIST =						\
 install-data-local: install-iconsDATA
 	(cd $(DESTDIR)$(themedir)/$(size) && $(ICONMAP) -c $(context))
 if ENABLE_LARGE_BITMAPS
-	for i in 32 48 64 72 96 128; do \
+	for i in 48 64 72 96 128; do \
 		pngdir="$(DESTDIR)$(themedir)/$${i}x$${i}/$(context)"; \
 		$(mkinstalldirs) $$pngdir; \
 		for icon in $(icons_DATA); do \
