2007-02-16  Rodney Dawes  <dobey@novell.com>
	* svg2png.sh.in: Handle having $(srcdir) passed in for the source
	icon when getting the ICONNAME variable to use for output
	Echo the command we're going to run to stdout

	* scalable/*/Makefile.am: Add $(srcdir) for loading the svg icon
	into svg2png.sh

--- a/scalable/apps/Makefile.am
+++ b/scalable/apps/Makefile.am
@@ -44,7 +44,7 @@ if ENABLE_LARGE_BITMAPS
 		pngdir="$(DESTDIR)$(themedir)/$${i}x$${i}/$(context)"; \
 		$(mkinstalldirs) $$pngdir; \
 		for icon in $(icons_DATA); do \
-			$(top_builddir)/svg2png.sh $$i $$pngdir $$icon; \
+			$(top_builddir)/svg2png.sh $$i $$pngdir $(srcdir)/$$icon; \
 		done; \
 		(cd $(DESTDIR)$(themedir)/$${i}x$${i} && $(ICONMAP) -c $(context)); \
 	done
