2007-05-24  Jakub Steiner <jimmac@ximian.com>
* software-update-available: new software update status icon

--- a/16x16/status/Makefile.am
+++ b/16x16/status/Makefile.am
@@ -27,6 +27,7 @@ icons_DATA =				\
 	network-transmit-receive.png	\
 	network-wireless-encrypted.png	\
 	printer-error.png		\
+	software-update-available.png	\
 	user-trash-full.png		\
 	weather-clear.png		\
 	weather-clear-night.png		\
