--- a/32x32/status/Makefile.am
+++ b/32x32/status/Makefile.am
@@ -27,6 +27,7 @@ icons_DATA =				\
 	network-transmit-receive.png	\
 	network-wireless-encrypted.png	\
 	printer-error.png		\
+	software-update-available.png	\
 	user-trash-full.png		\
 	weather-clear.png		\
 	weather-clear-night.png		\
