2007-08-10  Jakub Steiner <jimmac@ximian.com>
* apps/preferences-desktop-sound:
* actions/preferences-desktop-multimedia: renaming as per the
latest naming spec.

--- a/16x16/actions/Makefile.am
+++ b/16x16/actions/Makefile.am
@@ -65,6 +65,7 @@ icons_DATA =				\
 	media-seek-forward.png		\
 	media-skip-backward.png		\
 	media-skip-forward.png		\
+	preferences-desktop-multimedia.png	\
 	process-stop.png		\
 	system-lock-screen.png		\
 	system-log-out.png		\
