--- a/32x32/actions/Makefile.am
+++ b/32x32/actions/Makefile.am
@@ -65,6 +65,7 @@ icons_DATA =				\
 	media-seek-forward.png		\
 	media-skip-backward.png		\
 	media-skip-forward.png		\
+	preferences-desktop-multimedia.png	\
 	process-stop.png		\
 	system-lock-screen.png		\
 	system-log-out.png		\
