2007-08-10  Jakub Steiner <jimmac@ximian.com>
* actions/preferences-desktop-multimedia:
* apps/preferences-desktop-multimedia: I'm dumb as a doorknob.
Should go to the apps context.

--- a/16x16/apps/Makefile.am
+++ b/16x16/apps/Makefile.am
@@ -19,6 +19,7 @@ icons_DATA =						\
 	preferences-desktop-font.png			\
 	preferences-desktop-keyboard-shortcuts.png	\
 	preferences-desktop-locale.png	\
+	preferences-desktop-multimedia.png	\
 	preferences-desktop-remote-desktop.png		\
 	preferences-desktop-screensaver.png		\
 	preferences-desktop-theme.png			\
